# official_genaiserver_wl

./: .dockerignore  .env  .env.prod  .gitignore  Dockerfile  Procfile  ReadMe.md  alembic.ini  env.py  install_and_migrate.sh  pyproject.toml  requirements.txt  serverdatabase.db
.github/workflows/: deploy.yaml
genaiserver_rg/: flask_app.py  sql.py
genaiserver_wl_folder/: __init__.py  config.py  flask_app.py  sql.py
static/: styles.css
templates/: _navbar.html  about.html  chat.html  chat_detail.html  export.html  home1.html  home2.html  index.html  index1.html  index2.html  layout.html  loading.html  login.html  previous-versions.html  privacy.html  profile.html  register.html  styles.css  update-profile.html
templates/includes/: _navbar.html
wikiserver/: flask_app.py  sql.py
