[project]
name = "wikiserver"
version = "0.1.0"
description = "Add a short description here"
authors = [{name = "Woo Jin Lee", email = "163913803+woojin-lee713@users.noreply.github.com"}]
requires-python = ">= 3.11"
dependencies = ["wikiapp-wl @ https://test-files.pythonhosted.org/packages/a0/b4/77c3fe50ccb668ca41426db9297b7f0d0231ee97eec85f9a8f28f81cb100/wikiapp_wl-0.1.1-py3-none-any.whl"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
wikiserver = { path = ".", editable = true }

[tool.pixi.tasks]
server = "python wikiserver/flask_app.py"
populate = "python wikiserver/sql.py"

[tool.pixi.dependencies]
flask = ">=3.0.3,<3.1"
sqlalchemy = ">=2.0.30,<2.1"
click = ">=8.1.7,<8.2"
requests = ">=2.32.3,<2.33"
pydantic = ">=2.7.3,<2.8"

[tool.setuptools]
packages = ["wikiserver"]

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/default"
