[project]
name = "genaiserver_rg"
version = "0.1.0"
description = "A server for a chatbot that connects to OpenAI API"
authors = [
    { name = "Regina Garfias", email = "120662824+SGGmilagro@users.noreply.github.com" },
]
requires-python = ">= 3.11"
dependencies = [
    "genailib_rg @ https://test-files.pythonhosted.org/packages/ec/ff/a5b6a13937a8276d659814255a0b229c062871cb86db4028c398ff96ce48/genailib_rg-0.1.2-py3-none-any.whl",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
genaiserver = { path = ".", editable = true }

[tool.pixi.tasks]
server = "python genaiserver_rg/flask_app.py"
populate = "python genaiserver_rg/sql.py"

[tool.pixi.dependencies]
flask = ">=3.0.3,<3.1"
sqlalchemy = ">=2.0.30,<2.1"
click = ">=8.1.7,<8.2"
requests = ">=2.32.3,<2.33"
pydantic = ">=2.7.3,<2.8"
openai = "*"
python-dotenv = "*"

[tool.setuptools]
packages = ["genaiserver_rg"]

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/default"
