[project]
name = "official_genaiserver_wl"
version = "0.0.1"
description = "A user-friendly server of the created genai library using OpenAI API"
authors = [
    { name = "Woo Jin Lee", email = "163913803+woojin-lee713@users.noreply.github.com" },
]
requires-python = ">= 3.11"
dependencies = [
    "official_genailib_wl @ https://test-files.pythonhosted.org/packages/90/76/b9403b7696b742ef1a3842ec3980db9f96376cec827a5d6288af591e98cf/official_genailib_wl-1.5.0-py3-none-any.whl",
    "alembic",
    "psycopg2-binary",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
official_genaiserver_wl = { path = ".", editable = true }

[tool.pixi.tasks]
server = "python genaiserver_wl_folder/flask_app.py"
populate = "python genaiserver_wl_folder/sql.py"

[tool.pixi.dependencies]
flask = ">=3.0.3,<3.1"
sqlalchemy = ">=2.0.30,<2.1"
click = ">=8.1.7,<8.2"
requests = ">=2.32.3,<2.33"
pydantic = ">=2.7.3,<2.8"
openai = "*"
python-dotenv = "*"

[tool.tasks]
populate = "python -m serverdatabase.db"
server = "ENV=prod gunicorn -w -b 0.0.0.0:5000 'serverdatabase.app:create_app()'"

[tool.setuptools]
packages = ["genaiserver_wl_folder"]

[tool.pyright]
venvPath = "."
venv = ".pixi/envs/default"
